--- a/spay/Beers Page/Xibs/BeerTableViewCell.xib
+++ b/spay/Beers Page/Xibs/BeerTableViewCell.xib
@@ -7,17 +7,16 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BeerTableViewCell" rowHeight="180" id="KGk-i7-Jjw" customClass="BeerTableViewCell" customModule="spay" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="354" height="180"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BeerTableViewCell" rowHeight="181" id="KGk-i7-Jjw" customClass="BeerTableViewCell" customModule="spay" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="354" height="181"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="354" height="179.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="354" height="180.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T5s-tO-NTN">
@@ -40,56 +39,60 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oeo-H2-AQs">
-                        <rect key="frame" x="80" y="120.5" width="82.5" height="19.5"/>
+                        <rect key="frame" x="80" y="108" width="82.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="MORE INFO" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gft-AQ-TOw">
-                        <rect key="frame" x="80" y="145" width="91" height="20.5"/>
+                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Vt-qf-SSh">
+                        <rect key="frame" x="80" y="132.5" width="91" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" name="BackGroundOrange"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <state key="normal" title="MORE INFO">
+                            <color key="titleColor" name="BackGroundOrange"/>
+                        </state>
+                        <connections>
+                            <action selector="showMore" destination="KGk-i7-Jjw" eventType="touchUpInside" id="248-7L-QsF"/>
+                        </connections>
+                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epM-dy-Xvr" userLabel="Separator View">
-                        <rect key="frame" x="15" y="180.5" width="339" height="1"/>
+                        <rect key="frame" x="15" y="181.5" width="339" height="1"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="TIZ-px-ki1"/>
+                            <constraint firstAttribute="height" constant="1" id="5Qr-8f-C1B"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" name="BackGroundDarkBlue"/>
                 <constraints>
+                    <constraint firstItem="epM-dy-Xvr" firstAttribute="top" secondItem="T5s-tO-NTN" secondAttribute="bottom" constant="16" placeholder="YES" id="10c-AU-zH5"/>
                     <constraint firstItem="Oeo-H2-AQs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="5yo-kT-h54" secondAttribute="bottom" constant="25" id="1ZF-VE-u25"/>
                     <constraint firstItem="T5s-tO-NTN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="5wf-b3-7af"/>
-                    <constraint firstItem="Gft-AQ-TOw" firstAttribute="leading" secondItem="Oeo-H2-AQs" secondAttribute="leading" id="F0r-vl-w4U"/>
-                    <constraint firstItem="epM-dy-Xvr" firstAttribute="top" secondItem="T5s-tO-NTN" secondAttribute="bottom" constant="15" id="HPo-j7-Byr"/>
                     <constraint firstItem="Oeo-H2-AQs" firstAttribute="leading" secondItem="5yo-kT-h54" secondAttribute="leading" id="LHW-4c-Yin"/>
                     <constraint firstItem="h9G-U9-cXP" firstAttribute="leading" secondItem="T5s-tO-NTN" secondAttribute="trailing" constant="25" id="Msl-EP-fw6"/>
                     <constraint firstItem="5yo-kT-h54" firstAttribute="top" secondItem="h9G-U9-cXP" secondAttribute="bottom" constant="2" id="N9Q-dP-Exc"/>
                     <constraint firstItem="5yo-kT-h54" firstAttribute="leading" secondItem="h9G-U9-cXP" secondAttribute="leading" id="P9Y-np-cHN"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Oeo-H2-AQs" secondAttribute="trailing" constant="30" id="RBf-e2-Bv3"/>
+                    <constraint firstItem="8Vt-qf-SSh" firstAttribute="leading" secondItem="Oeo-H2-AQs" secondAttribute="leading" id="R6m-Xy-gaE"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Oeo-H2-AQs" secondAttribute="trailing" constant="25" id="RBf-e2-Bv3"/>
                     <constraint firstAttribute="trailing" secondItem="epM-dy-Xvr" secondAttribute="trailing" id="T15-0c-CTb"/>
-                    <constraint firstItem="Gft-AQ-TOw" firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" id="a4a-Rv-LbL"/>
                     <constraint firstItem="T5s-tO-NTN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="aDP-RQ-i1a"/>
+                    <constraint firstAttribute="bottom" secondItem="epM-dy-Xvr" secondAttribute="bottom" id="gt6-Jt-qF1"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8Vt-qf-SSh" secondAttribute="trailing" constant="25" id="h0h-Qf-b29"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5yo-kT-h54" secondAttribute="trailing" constant="25" id="hxc-wy-Ikg"/>
                     <constraint firstItem="h9G-U9-cXP" firstAttribute="top" secondItem="T5s-tO-NTN" secondAttribute="top" id="j0c-WP-fIA"/>
-                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Gft-AQ-TOw" secondAttribute="trailing" constant="25" id="mMo-rz-cqC"/>
                     <constraint firstItem="epM-dy-Xvr" firstAttribute="leading" secondItem="T5s-tO-NTN" secondAttribute="leading" id="rFD-lp-HX3"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="h9G-U9-cXP" secondAttribute="trailing" constant="25" id="suV-26-oWO"/>
-                    <constraint firstItem="Gft-AQ-TOw" firstAttribute="top" secondItem="Oeo-H2-AQs" secondAttribute="bottom" constant="5" id="tI3-wI-GxM"/>
+                    <constraint firstItem="8Vt-qf-SSh" firstAttribute="top" secondItem="Oeo-H2-AQs" secondAttribute="bottom" constant="5" id="uXV-cG-chq"/>
+                    <constraint firstItem="8Vt-qf-SSh" firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" id="umX-QO-skY"/>
                     <constraint firstAttribute="bottom" secondItem="T5s-tO-NTN" secondAttribute="bottom" constant="15" id="ziC-RS-NMz"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="beerDescription" destination="Oeo-H2-AQs" id="KhF-mh-Cca"/>
                 <outlet property="beerImage" destination="T5s-tO-NTN" id="fmi-oY-upK"/>
                 <outlet property="name" destination="h9G-U9-cXP" id="gPj-EQ-zzn"/>
                 <outlet property="tagline" destination="5yo-kT-h54" id="ld7-dJ-3PH"/>
             </connections>
-            <point key="canvasLocation" x="162.31884057971016" y="193.52678571428569"/>
+            <point key="canvasLocation" x="162.31884057971016" y="193.86160714285714"/>
         </tableViewCell>
     </objects>
     <resources>
