--- a/spay/Beers Page/Xibs/BeerDetailsView.xib
+++ b/spay/Beers Page/Xibs/BeerDetailsView.xib
@@ -19,6 +19,7 @@
                 <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jFY-3b-2YB" userLabel="Top Overlay">
                     <rect key="frame" x="0.0" y="0.0" width="618" height="500"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <accessibility key="accessibilityConfiguration" identifier="TopOverlay"/>
                     <gestureRecognizers/>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="UFT-0l-2zh" appends="YES" id="uyD-2a-4jX"/>
@@ -42,24 +43,28 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyu-ma-Hib">
                                             <rect key="frame" x="0.0" y="0.0" width="41.5" height="24"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="Name"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0d7-Ko-81j">
                                             <rect key="frame" x="0.0" y="26" width="493" height="23"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="Tagline"/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPb-d6-Age">
                                             <rect key="frame" x="0.0" y="64" width="87" height="20.5"/>
+                                            <accessibility key="accessibilityConfiguration" identifier="Description"/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <accessibility key="accessibilityConfiguration" identifier="ContentView"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Dyu-ma-Hib" secondAttribute="trailing" constant="15" id="9BT-2y-JJW"/>
                                         <constraint firstAttribute="trailing" secondItem="0d7-Ko-81j" secondAttribute="trailing" constant="15" id="GHk-ag-CUU"/>
@@ -82,6 +87,9 @@
                                 <constraint firstAttribute="bottom" secondItem="USw-bf-nkM" secondAttribute="bottom" id="WaY-pW-8YH"/>
                                 <constraint firstItem="USw-bf-nkM" firstAttribute="leading" secondItem="V7r-eg-jeH" secondAttribute="leading" id="a22-n2-0Db"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ScrollView"/>
+                            </userDefinedRuntimeAttributes>
                         </scrollView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6WX-sQ-gwA" userLabel="Bookmark View">
                             <rect key="frame" x="573" y="0.0" width="20" height="35"/>
@@ -93,6 +101,7 @@
                         </view>
                     </subviews>
                     <color key="backgroundColor" name="BackgroundGrey"/>
+                    <accessibility key="accessibilityConfiguration" identifier="DetailsView"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="R0H-PP-FAB" secondAttribute="bottom" constant="20" id="KWk-sl-EG9"/>
                         <constraint firstItem="V7r-eg-jeH" firstAttribute="leading" secondItem="R0H-PP-FAB" secondAttribute="trailing" constant="25" id="L61-Rc-SEh"/>
@@ -108,6 +117,7 @@
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <accessibility key="accessibilityConfiguration" identifier="BeersDetailsView"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="jFY-3b-2YB" secondAttribute="trailing" id="7eL-RD-qnf"/>
                 <constraint firstAttribute="bottom" secondItem="VTT-Sc-Q4b" secondAttribute="bottom" id="8Pj-i2-zcj"/>
